--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.data.mongodb.uri=mongodb://localhost:27017/product-service
+spring.data.mongodb.uri=mongodb://localhost:27017/product-service
 spring.application.name=product-service
 server.port=51608
 #spring.zipkin.base.url=http://localhost:9411
